--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -1,4 +1,4 @@
-<body>
+
   <h1 style="text-align:center;color:#56baed">Admin Dashboard</h1>
   <h2 style="text-align:center;color:#56baed">Users</h2>
   <app-user></app-user>
@@ -55,5 +55,9 @@
 <br>
 <br>
 <br>
-
-</body>
+<div>
+<a [routerLink]="['/login']">
+  <div class="item2">
+     Log out
+  </div>
+</a>
