--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -48,3 +48,11 @@
         <button class="btn-finish">FINISH STORE CHECK</button>
     </div>
 </div>
+
+<div>
+<a [routerLink]="['/storeCheck']">
+    <div class="item2">
+       Exit
+    </div>
+</a>
+</div>
