--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -1,6 +1,4 @@
-<div class="header">
-    
-</div>
+
 <div class="menu">
     <a [routerLink]="['/chooseObject/addStoreCheck']">
         <div class="item start-sc" (click)="startStoreCheck()">
@@ -10,6 +8,11 @@
     <a [routerLink]="['/chooseObject/resolveFeedbacks']">
         <div class="item resolve-fb" (click)="resolveFeedbacks()">
             Resolve Feedbacks
+        </div>
+    </a>
+    <a [routerLink]="['/login']">
+        <div class="item2 resolve-fb">
+           Log out
         </div>
     </a>
 </div>
