--- a/src/app/components/choose-object/choose-object.component.css
+++ b/src/app/components/choose-object/choose-object.component.css
@@ -1,9 +1,9 @@
 .header {
     text-align: center;
-    height: 300px;
+    height: 100px;
     background-color: #56baed;
     color: #fff;
-    line-height: 300px;
+    line-height: 100px;
 }
 
 .main {
@@ -77,3 +77,31 @@
     color: #39ace7;
     transition: 0.3s;
 }
+
+.item2{
+    background-color: white;
+    color: #39ace7;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 25px;
+    border: 2px solid #39ace7;
+    cursor: pointer;
+    margin: 0 auto;
+    position: relative;
+    margin-bottom: 1%;
+    
+    margin-top: 50%;
+
+}
+
+.item2:hover {
+    background-color: #39ace7;
+    color: #fff;
+    transition: 0.3s;
+}
+.btn, a {
+    text-decoration: none;     
+  }
