--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -46,7 +46,7 @@
     <i class="fa-solid fa-circle-chevron-up fa-1x" (click)="showObjectInfos()" *ngIf="showDetails == true"></i>
 </div>
 
-<app-feedback [objectName]="objectName" [resolveFeedbacks]="false"></app-feedback>
+<app-feedback [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks"></app-feedback>
 <app-position [objectName]="objectName"></app-position>
 
 <!--<div class="main">
