--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -1,50 +1,57 @@
 <mat-form-field>
-  <input type="text" matInput placeholder="Search" [(ngModel)]= "search" (keyup)="applyFilter($event)">
-  <button matSuffix mat-button (click)="searchByString()"><mat-icon>search</mat-icon></button>
-  </mat-form-field>
+  <input type="text" matInput placeholder="Search" [(ngModel)]="search" (keyup)="applyFilter($event)">
+  <button matSuffix mat-button (click)="searchByString()">
+    <mat-icon>search</mat-icon>
+  </button>
+</mat-form-field>
 
 <div class="container mat-elevation-z8">
 
-<mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+  <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
-  <ng-container matColumnDef="objectName">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectName</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{ row.objectName }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="objectName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectName</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{ row.objectName }}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="objectIdCompany">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectIdCompany</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{ row.objectIdCompany }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="objectIdCompany">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectIdCompany</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{ row.objectIdCompany }}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="objectIdRetail">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectIdRetail</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{ row.objectIdRetail }}</mat-cell>
-  </ng-container>
-
-
+    <ng-container matColumnDef="objectIdRetail">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>ObjectIdRetail</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{ row.objectIdRetail }}</mat-cell>
+    </ng-container>
 
 
-  <ng-container matColumnDef="actions">
-    <mat-header-cell *matHeaderCellDef>
-      <button mat-icon-button color="primary">
-<mat-icon (click)="openDialog(1)">add</mat-icon>
-      </button>
-    </mat-header-cell>
-    <mat-cell *matCellDef="let row; let i=index">
-      <button mat-icon-button color="primary">
-        <mat-icon area-label="Edit" (click)="openDialog(2,row.objectName,row.objectIdCompany,row.objectIdRetail)"> edit </mat-icon>
-              </button>
 
-     <button mat-icon-button color="primary"><mat-icon area-label="Delete" (click)="openDialog(3,row.objectName,row.objectIdCompany,row.objectIdRetail)"> delete </mat-icon>
-            </button>
 
-      <button mat-icon-button color="primary"><mat-icon area-label="Open" [routerLink]="['/storeCheckPage', row.objectName]">open_in_new</mat-icon>
-            </button>
-    </mat-cell>
-  </ng-container>
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef>
+        <button mat-icon-button color="primary">
+          <mat-icon (click)="openDialog(1)">add</mat-icon>
+        </button>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row; let i=index">
+        <button mat-icon-button color="primary">
+          <mat-icon area-label="Edit" (click)="openDialog(2,row.objectName,row.objectIdCompany,row.objectIdRetail)">
+            edit </mat-icon>
+        </button>
+
+        <button mat-icon-button color="primary">
+          <mat-icon area-label="Delete" (click)="openDialog(3,row.objectName,row.objectIdCompany,row.objectIdRetail)">
+            delete </mat-icon>
+        </button>
+
+        <button mat-icon-button color="primary">
+          <mat-icon area-label="Open" [routerLink]="['/storeCheckPage', workModel, row.objectName]">open_in_new
+          </mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
 
 </div>
