--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -4,20 +4,20 @@
  
 <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
-  <ng-container matColumnDef="img">
+  <!-- <ng-container matColumnDef="img">
     <th mat-header-cell *matHeaderCellDef> Image </th>
     <td mat-cell *matCellDef="let row"> <img [src]="row.img" alt="SC photo" width="50" height="50"/> </td>
-  </ng-container>
+  </ng-container> -->
 
   <ng-container matColumnDef="feedbackCategoryName">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Category</mat-header-cell>
     <mat-cell *matCellDef="let row">{{ row.feedbackCategoryName }}</mat-cell>
   </ng-container>
 
-  <ng-container matColumnDef="text">
+  <!-- <ng-container matColumnDef="text">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Text</mat-header-cell>
     <mat-cell *matCellDef="let row">{{ row.text }}</mat-cell>
-  </ng-container>
+  </ng-container> -->
 
   <ng-container matColumnDef="date">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
