--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -10,25 +10,25 @@
     </div>
     <div class="form">
       <mat-form-field>
-        <input matInput [(ngModel)]="data.text" name="text" [disabled]="true" />
+        <input matInput [(ngModel)]="data.feedbackCategoryName" name="feedbackCategoryName" [disabled]="true" />
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field>
-        <input matInput [(ngModel)]="data.feedbackCategoryName" name="feedbackCategoryName" [disabled]="true" />
+        <input matInput [(ngModel)]="data.text" name="text" [disabled]="true" />
       </mat-form-field>
     </div>
-      <form [formGroup]="form" (ngSubmit)="submitForm()">
-        <input type="file" (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file">
-        <button mat-button>Resolve</button>
-      </form>
-      <div mat-dialog-actions>
-        <button mat-button *ngIf="flag == 1" type="submit" [mat-dialog-close]="1" (click)="add()"
-          [disabled]="!formControl.valid">Ok</button>
 
-        <button mat-button (click)="close()">Close</button>
-      </div>
+    <form [formGroup]="form" *ngIf="resolveFeedbacks" (ngSubmit)="submitForm()">
+      <input type="file" (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file">
+      <button mat-button>Resolve</button>
+    </form>
+    <div mat-dialog-actions>
+      <button mat-button *ngIf="resolveFeedbacks" type="submit" [mat-dialog-close]="1" (click)="add()"
+        [disabled]="!formControl.valid">Ok</button>
+
+      <button mat-button (click)="close()">Close</button>
+    </div>
   </form>
 </div>
-    
