--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -1,59 +1,56 @@
-
-
 <div class="container mat-elevation-z8">
- 
-<mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
-  <!-- <ng-container matColumnDef="img">
+  <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+
+    <!-- <ng-container matColumnDef="img">
     <th mat-header-cell *matHeaderCellDef> Image </th>
     <td mat-cell *matCellDef="let row"> <img [src]="row.img" alt="SC photo" width="50" height="50"/> </td>
   </ng-container> -->
 
-  <ng-container matColumnDef="feedbackCategoryName">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Category</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{ row.feedbackCategoryName }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="feedbackCategoryName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Category</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{ row.feedbackCategoryName }}</mat-cell>
+    </ng-container>
 
-  <!-- <ng-container matColumnDef="text">
+    <!-- <ng-container matColumnDef="text">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Text</mat-header-cell>
     <mat-cell *matCellDef="let row">{{ row.text }}</mat-cell>
   </ng-container> -->
 
-  <ng-container matColumnDef="date">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{ row.date }}</mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{ row.date | date:'dd.MM.yyyy.' }}</mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="resolved">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Resolved</mat-header-cell>
-    <mat-cell *matCellDef="let row">{{ row.resolved }}</mat-cell>
-  </ng-container>
+    <!-- <ng-container matColumnDef="resolved">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Resolved</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{ row.resolved }}</mat-cell>
+    </ng-container> -->
 
-  <ng-container matColumnDef="username">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>User</mat-header-cell>
-    <mat-cell *matCellDef="let row" class="table-row">{{ row.username }}</mat-cell>
-  </ng-container>
-
-
+    <ng-container matColumnDef="username">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>User</mat-header-cell>
+      <mat-cell *matCellDef="let row" class="table-row">{{ row.username }}</mat-cell>
+    </ng-container>
 
 
-  <ng-container matColumnDef="actions">
-    <mat-header-cell *matHeaderCellDef>
-      <button mat-icon-button color="primary" (click)="openCreateDialog(1)">
-<mat-icon>add</mat-icon>
-      </button>
-    </mat-header-cell>
-    <mat-cell *matCellDef="let row; let i=index">
 
-    </mat-cell>
-  </ng-container>
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns" (click)="openDialog(3,row.feedbackCategoryName,row.text,row.date,row.resolved,row.img,row.username)"></mat-row>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef>
+        <button mat-icon-button color="primary" (click)="openCreateDialog(1)">
+          <mat-icon>add</mat-icon>
+        </button>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row; let i=index">
+
+      </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"
+      (click)="openDialog(3,row.feedbackCategoryName,row.text,row.date,row.resolved,row.img,row.username)"></mat-row>
   </mat-table>
 
   <!--<button mat-button (click)="showResolvedFeedbacks()" *ngIf="!showResolved">Show Resolved</button>
   <button mat-button (click)="showResolvedFeedbacks()" *ngIf="showResolved">Show Unresolved</button>-->
   <button mat-button [routerLink]="['/resolvedFeebacks/', objectName]">Show Resolved</button>
 </div>
-
-
