--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -1,11 +1,11 @@
-<div class="menu">
-    <div class="item start-sc" [routerLink]="['/chooseObject/addStoreCheck']">
+<div class="menu fadeInDown">
+    <div class="item start-sc fadeIn first" [routerLink]="['/chooseObject/addStoreCheck']">
         Start Store Check
     </div>
-    <div class="item resolve-fb" [routerLink]="['/chooseObject/resolveFeedbacks']">
+    <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/resolveFeedbacks']">
         Resolve Feedbacks
     </div>
-    <div class="item2 resolve-fb" [routerLink]="['/login']">
+    <div class="item2 resolve-fb fadeIn third" [routerLink]="['/login']">
         Log out
     </div>
 </div>
