--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -1,52 +1,62 @@
+<div class="fadeInDown">
+
+  <div class="fadeIn first">
+    <h1 style="text-align:center;color:#56baed;margin-bottom:2%">Admin Dashboard</h1>
+  </div>
+
+  <div class="fadeIn first">
+    <h2 style="text-align:center;color:#56baed">Users</h2>
+    <app-user></app-user>
+  </div>
+
+  <div class="fadeIn first">
+    <h2 style="text-align:center;color:#56baed;margin:2%">Objects</h2>
+    <app-object></app-object>
+  </div>
+
+  <div class="fadeIn first">
+    <h2 style="text-align:center;color:#56baed;margin:2%">Retailers</h2>
+    <app-retailer></app-retailer>
+    </div>
+
+    <div class="fadeIn second">
+      <h2 style="text-align:center;color:#56baed;margin:2%">Import Excel</h2>
+    
 
 
-  <h1 style="text-align:center;color:#56baed;margin-bottom:2%">Admin Dashboard</h1>
+      <div class="parentcontainer">
 
-  <h2 style="text-align:center;color:#56baed">Users</h2>
-  <app-user></app-user>
-  <br>
-  <h2 style="text-align:center;color:#56baed;margin:2%">Objects</h2>
-  <app-object></app-object>
-  <br>
-  <h2 style="text-align:center;color:#56baed;margin:2%">Retailers</h2>
-  <app-retailer></app-retailer>
-  <br>
-  <h2 style="text-align:center;color:#56baed;margin:2%">Import Excel</h2>
-  <br>
+            <div class="container">
+              <h3 style="text-align:center;color:#56baed">Objects</h3>
+              <input type="file" #fileDropRef (change)="uploadObjectsFile($event)" id="fileDropRef" />
+
+
+              <h3 style="margin:5%">Drag and drop file here</h3>
+
+              <label for="fileDropRef" style="background-color:#56baed">Browse for file</label>
+            </div>
 
 
 
-  <div class="parentcontainer">
+        <div class="container">
+          <h3 style="text-align:center;color:#56baed">Positions</h3>
+          <input type="file" #fileDropRef (change)="uploadPositionsFile($event)" id="fileDropRef" />
 
-      <div class="container">
-        <h3 style="text-align:center;color:#56baed">Objects</h3>
-        <input type="file" #fileDropRef (change)="uploadObjectsFile($event)" id="fileDropRef" />
+          <h3 style="margin:5%">Drag and drop file here</h3>
 
-
-        <h3 style="margin:5%">Drag and drop file here</h3>
-
-        <label for="fileDropRef" style="background-color:#56baed">Browse for file</label>
+          <label for="fileDropRef" style="background-color:#56baed">Browse for file</label>
+        </div>
       </div>
 
+    </div>
 
 
-  <div class="container">
-    <h3 style="text-align:center;color:#56baed">Positions</h3>
-    <input type="file" #fileDropRef (change)="uploadPositionsFile($event)" id="fileDropRef" />
-
-    <h3 style="margin:5%">Drag and drop file here</h3>
-
-    <label for="fileDropRef" style="background-color:#56baed">Browse for file</label>
-  </div>
+    <div class="fadeIn third">
+  <a [routerLink]="['/login']">
+    <div class="item2">
+      Log out
+    </div>
+  </a>
 </div>
 
-
-
-
-
-<a [routerLink]="['/login']">
-  <div class="item2">
-     Log out
-  </div>
-</a>
-
+</div>
