--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -2,6 +2,14 @@
 
   <h1 style="text-align:center;color:#56baed;margin-bottom:2%">Admin Dashboard</h1>
 
+  <div align="end" style="margin-right:10%;">
+    <button mat-raised-button style="background-color:#56baed" (click)="openDialog()">Analytics</button>
+  </div>
+
+
+
+
+
   <h2 style="text-align:center;color:#56baed">Users</h2>
   <app-user></app-user>
   <br>
@@ -25,7 +33,8 @@
 
         <h3 style="margin:5%">Drag and drop file here</h3>
 
-        <label for="fileDropRef" style="background-color:#56baed">Browse for file</label>
+        <label for="fileDropRef" style="background-color:#56baed;background-color:#56baed;width:50px;
+        display: inline-block;">Browse</label>
       </div>
 
 
@@ -36,7 +45,8 @@
 
     <h3 style="margin:5%">Drag and drop file here</h3>
 
-    <label for="fileDropRef" style="background-color:#56baed">Browse for file</label>
+    <label for="fileDropRef" style="background-color:#56baed;width:50px;
+    display: inline-block;">Browse</label>
   </div>
 </div>
 
