--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -3,6 +3,8 @@
 
 <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
+
+
   <ng-container matColumnDef="objectName">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Object</mat-header-cell>
     <mat-cell *matCellDef="let row">{{ row.objectName}}</mat-cell>
@@ -23,7 +25,7 @@
       </button>
     </mat-header-cell>
     <mat-cell *matCellDef="let row; let i=index">
-<mat-checkbox color="primary"></mat-checkbox>
+<mat-checkbox color="primary" (change)="updatePosition(cb.checked, row)" #cb></mat-checkbox>
 
     <button mat-icon-button color="primary" style="margin-left:30%"><mat-icon area-label="Delete"> delete </mat-icon>
     </button>
