--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -6,9 +6,8 @@
 
 
 
-
-  <div align="end" style="margin-right:10%;">
-    <button mat-raised-button style="background-color:#56baed" (click)="openDialog()">Analytics</button>
+  <div>
+    <button  class="item2 analytics2 " (click)="openDialog()">Analytics</button>
   </div>
 
 
