Refaktorisanje iz style u css i centriranje searchboxova

--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -1,7 +1,7 @@
 <div class="fadeInDown">
 
   <div class="fadeIn first">
-    <h1 style="text-align:center;color:#56baed;margin-bottom:2%">Admin Dashboard</h1>
+    <h1 class="mainHeading">Admin Dashboard</h1>
   </div>
 
 
@@ -15,24 +15,24 @@
 
 
   <div class="fadeIn first">
-    <h2 style="text-align:center;color:#56baed">Users</h2>
+    <h2 class="heading">Users</h2>
     <app-user></app-user>
   </div>
 
   <div class="fadeIn first">
-    <h2 style="text-align:center;color:#56baed;margin:2%">Objects</h2>
+    <h2 class="heading">Objects</h2>
     <app-object></app-object>
   </div>
 
   <div class="fadeIn first">
-    <h2 style="text-align:center;color:#56baed;margin:2%">Retailers</h2>
+    <h2 class="heading">Retailers</h2>
     <app-retailer></app-retailer>
   </div>
 
 
 
   <div class="fadeIn second">
-    <h2 style="text-align:center;color:#56baed;margin:2%">Import Excel</h2>
+    <h2 class="heading">Import Excel</h2>
 
 
 
@@ -40,28 +40,26 @@
 
 
       <div class="container">
-        <h3 style="text-align:center;color:#56baed">Objects</h3>
+        <h3 class="uploadHeading">Objects</h3>
         <input type="file" #fileDropRef (change)="uploadObjectsFile($event)" id="fileDropRef" />
 
 
         <h3 style="margin:5%">Drag and drop file here</h3>
 
 
-        <label for="fileDropRef" style="background-color:#56baed;background-color:#56baed;width:50px;
-            display: inline-block;">Browse</label>
+        <label for="fileDropRef" class="browseButton" style="background-color:#56baed">Browse</label>
       </div>
 
 
 
       <div class="container">
-        <h3 style="text-align:center;color:#56baed">Positions</h3>
+        <h3 class="uploadHeading">Positions</h3>
         <input type="file" #fileDropRef (change)="uploadPositionsFile($event)" id="fileDropRef" />
 
 
         <h3 style="margin:5%">Drag and drop file here</h3>
 
-        <label for="fileDropRef" style="background-color:#56baed;width:50px;
-          display: inline-block;">Browse</label>
+        <label class="browseButton" style="background-color:#56baed" for="fileDropRef">Browse</label>
       </div>
 
     </div>
