--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -1,8 +1,9 @@
+<div class="centered">
 <mat-form-field>
   <input type="text" matInput placeholder="Search" [(ngModel)]= "search">
   <button matSuffix mat-button (click)="searchByName()"><mat-icon>search</mat-icon></button>
   </mat-form-field>
-
+</div>
 <div class="container mat-elevation-z8">
 
 <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
