--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -8,10 +8,17 @@
         <div class="object-info-data" *ngIf="showDetails == true">
             <div class="obj-info">
                 <ul>
+                    <li>Address: {{ object.address }}, {{ object.city }}</li>
+                    <li>Format: {{ object.objectFormat }}</li>
                     <li>Retailer: {{ object.retailer.retailerName }}</li>
                     <li>Assortment module: {{ object.objectInfo.assortmentModule }}</li>
                     <li>Number of registers: {{ object.objectInfo.registersNumber }}</li>
+                    <li>Director: {{ object.director.firstName }} {{ object.director.lastName }}</li>
                     <li>Commercialist: {{ object.commercialist.firstName }} {{ object.commercialist.lastName }}</li>
+                    <li>Supervisor: {{ object.supervisor.firstName }} {{ object.supervisor.lastName }}</li>
+                    <li>Director: {{ object.merchandiser.firstName }} {{ object.merchandiser.lastName }}</li>
+                    <li>Requisition days: {{ object.requisitionDays }}</li>
+                    <li>Merchandiser revision days: {{ object.merchandiserRevisionDays }}</li>
                 </ul>
             </div>
             <table class="info-table">
