--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -38,12 +38,15 @@
 
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
-        <button mat-icon-button color="primary" (click)="openCreateDialog(1)">
+        <button mat-icon-button color="primary" (click)="openDialog(1)">
           <mat-icon>add</mat-icon>
         </button>
       </mat-header-cell>
       <mat-cell *matCellDef="let row; let i=index">
-
+        
+        <button mat-icon-button color="primary" style="margin-left:30%">
+          <mat-icon> warning </mat-icon>
+        </button>
       </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
