--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -32,9 +32,18 @@
       <mat-cell *matCellDef="let row" class="table-row">{{ row.username }}</mat-cell>
     </ng-container>
 
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef>
+      
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row; let i=index">
+
+      </mat-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"
-      (click)="openDialog(3,row.feedbackCategoryName,row.text,row.date,row.resolved,row.img,row.username)"></mat-row>
+    <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns" (click)="openDialog(3,row.feedbackCategoryName,row.text,row.date,row.resolved,row.img,row.username)"></mat-row>
   </mat-table>
   <mat-paginator [length]="length" [pageSize]="count" (page)="loadDataOnPageEvent($event)"></mat-paginator>
 </div>
