--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -5,18 +5,24 @@
 
     <div class="form">
 
-      <img [src]="data.img" alt="SC photo" width="250" height="250" />
+      <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.img}}" alt="SC photo" width="250" height="250" />
+
+    </div>
+
+    <div class="form" *ngIf="data.imgResolve">
+
+      <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.imgResolve}}" alt="SC photo" width="250" height="250" />
 
     </div>
     <div class="form">
       <mat-form-field>
-        <input matInput [(ngModel)]="data.feedbackCategoryName" name="feedbackCategoryName" [disabled]="true" />
+        <input matInput [(ngModel)]="data.feedbackCategoryName" name="feedbackCategoryName"  [disabled]="true" />
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field>
-        <input matInput [(ngModel)]="data.text" name="text" [disabled]="true" />
+        <input matInput [(ngModel)]="data.text" name="text" [disabled]="true"/>
       </mat-form-field>
     </div>
 
@@ -25,6 +31,9 @@
       <button mat-button>Resolve</button>
     </form>
     <div mat-dialog-actions>
+      <button mat-icon-button color="primary" *ngIf="data.img=='' || data.img=='NULL' "(click)="openInfo()">
+        <mat-icon> warning </mat-icon>
+      </button>
       <button mat-button *ngIf="resolveFeedbacks" type="submit" [mat-dialog-close]="1" (click)="add()"
         [disabled]="!formControl.valid">Ok</button>
 
