--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -38,7 +38,7 @@
 
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
-        <button mat-icon-button color="primary" (click)="openDialog(1)">
+        <button mat-icon-button color="primary" (click)="openCreateDialog(1)">
           <mat-icon>add</mat-icon>
         </button>
       </mat-header-cell>
