--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -7,7 +7,7 @@
 
 
   <div>
-    <button  class="item2 analytics2 " (click)="openDialog()">Analytics</button>
+    <button  class="item2 analytics2 " (click)="openDialog(1)">Analytics</button>
   </div>
 
 
