font storecheckpage exit

--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -62,8 +62,8 @@
 
         <button class="btn-finish" [routerLink]="['/chooseObject/{{workModel}}']"
             (click)="finishObjectStoreCheck()">FINISH OBJECT</button>
-
-        <div class="btn-finish" [routerLink]="['/chooseObject/{{workModel}}']">EXIT</div>
+        
+        <button class="btn-finish" [routerLink]="['/chooseObject/{{workModel}}']">EXIT</button>
     </div>
 
 
