--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -127,7 +127,7 @@
     color: #fff;
     width: 200px;
     padding: 10px 0;
-    margin: 30px auto;
+    margin: 30px ;
     cursor: pointer;
 }
 
