--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -20,7 +20,7 @@
 
   <div class="fadeIn first">
     <h2 class="heading">Objects</h2>
-    <app-object></app-object>
+    <app-object [isAdmin]="true"></app-object>
   </div>
 
   <div class="fadeIn first">
