--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -19,7 +19,7 @@
                     <td><i class="fa-solid fa-up-right-from-square"></i></td>
                 </tr>
             </table>
-            <app-object [workModel]="workModel"></app-object>
+            <app-object [workModel]="workModel" [isAdmin]="false"></app-object>
             <button class="btn-finish" (click)="openDialog()" *ngIf="!resolveFeedbacks && storeCheck">FINISH STORE
                 CHECK</button>
         </div>
