--- a/src/app/components/resolved-feedbacks/resolved-feedbacks.component.html
+++ b/src/app/components/resolved-feedbacks/resolved-feedbacks.component.html
@@ -1,4 +1,4 @@
-<h1>List of all feedbacks</h1>
+<div class="font"><h1>List of all feedbacks</h1>
 
 
 <div class="container" style="margin-top: 70px;">
@@ -67,5 +67,5 @@
 
     </form>
 </div>
-  <br>
 
+</div>
