--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -1,4 +1,4 @@
-<div class="centered">
+<div class="centered font">
 <mat-form-field>
   <input type="text" matInput placeholder="Search" [(ngModel)]= "search">
   <button matSuffix mat-button (click)="searchByName()"><mat-icon>search</mat-icon></button>
