--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="centered">
+<div class="font"><div class="centered">
 <mat-form-field>
 
   <input type="text" matInput placeholder="Search" [(ngModel)]= "search">
@@ -55,4 +55,5 @@
   <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
 
+</div>
 </div>
