--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -2,6 +2,16 @@
 .mat-header-cell {
   background: #39ace7;
 }
+.font{
+  font-family:sans-serif;
+}
+.header {
+  text-align: center;
+  height: 100px;
+  background-color: #56baed;
+  color: #fff;
+  line-height: 100px;
+}
 
 i {
   color: #56baed;
