--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -1,7 +1,8 @@
-<div class="container mat-elevation-z8">
+<div class="container mat-elevation-z8 font">
 
   <div class="adr-name-search">
-    <h4>ENTER ADDRESS OR NAME:</h4>
+    
+    <h4>Enter address or object name</h4>
     <mat-form-field>
       <input type="text" matInput placeholder="Search" [(ngModel)]="search">
       <button matSuffix mat-button (click)="searchByString()">
@@ -62,7 +63,7 @@
   </mat-table>
 
   <div class="detail-search">
-    <h4>DETAIL SEARCH</h4>
+    <h4>Detail search</h4>
     <div class="detail-search-menu" *ngIf="detailSearch">
       <div class="menu-item">
         <mat-form-field>
