--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -146,6 +146,7 @@
   
   /* Simple CSS3 Fade-in-down Animation */
   .fadeInDown {
+    font-family: sans-serif;
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     -webkit-animation-duration: 1s;
