--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -2,7 +2,7 @@
 <mat-form-field>
 
   <input type="text" matInput placeholder="Search" [(ngModel)]= "search">
-  <button matSuffix mat-button (click)="searchByUsername()"><mat-icon>search</mat-icon></button>
+  <button matSuffix mat-button class="search" (click)="searchByUsername()"><mat-icon class="search">search</mat-icon></button>
 
   </mat-form-field>
 </div>
