--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -30,3 +30,17 @@ h1{
   .table-row {
     height: 30px !important;
   }
+
+  .mat-column-date {
+    width:30%;
+}
+
+mat-cell:nth-child(1),
+mat-header-cell:nth-child(1) {
+    flex: 0 0 30%;
+}
+
+mat-cell:nth-child(5),
+mat-header-cell:nth-child(5) {
+    flex: 0 0 10%;
+}
