--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -2,7 +2,7 @@
     background-color: #56baed;
     color: #fff;
     width: 100%;
-    padding: 10px 0 10px 10px;
+    padding: 10px;
     text-align: center;
 }
 
@@ -11,6 +11,7 @@
     width: 400px;
     margin: 0 auto;
     padding: 0 20px;
+    max-width: 100%;
 }
 
 .header i {
@@ -55,11 +56,11 @@
 .main {
     width: 100%;
     background-color: #fff;
-    padding-top: 100px;
     text-align: center;
 }
 
 .main h3 {
+    margin: 50px 0 25px 0;
     color: grey;
 }
 
@@ -140,7 +141,6 @@
 .finish-sc td {
     border: 1px solid grey;
 }
-
 
   /* ANIMATIONS */
   
