--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -57,7 +57,9 @@
 
 
     <div class="main fadeIn second">
+        <h3>UNRESOLVED FEEDBACKS:</h3>
         <app-feedback [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks"></app-feedback>
+        <h3>SECONDARY POSITIONS:</h3>
         <app-position [objectName]="objectName" [resolveFeedbacks]="resolveFeedbacks"></app-position>
 
         <button class="btn-finish" [routerLink]="['/chooseObject/{{workModel}}']"
