Unresolved feedbacks heading

--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -1,6 +1,10 @@
 <div class="container mat-elevation-z8 font">
 
+  <h3 class="heading">UNRESOLVED FEEDBACKS:</h3>
+
   <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+
+
 
     <!-- <ng-container matColumnDef="img">
     <th mat-header-cell *matHeaderCellDef> Image </th>
