--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -44,3 +44,127 @@ mat-cell:nth-child(5),
 mat-header-cell:nth-child(5) {
     flex: 0 0 10%;
 }
+
+
+
+.fadeInDown {
+  font-family:sans-serif;
+  -webkit-animation-name: fadeInDown;
+  animation-name: fadeInDown;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+/* Simple CSS3 Fade-in Animation */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fadeIn {
+  opacity:0;
+  -webkit-animation:fadeIn ease-in 1;
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:1s;
+}
+
+.fadeIn.first {
+  -webkit-animation-delay: 0.4s;
+  -moz-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+
+.fadeIn.second {
+  -webkit-animation-delay: 0.6s;
+  -moz-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
+
+.fadeIn.third {
+  -webkit-animation-delay: 0.8s;
+  -moz-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+}
+
+.fadeIn.fourth {
+  -webkit-animation-delay: 1s;
+  -moz-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+
+.heading{
+  text-align:center;
+  color:#56baed;
+  margin:3%
+}
+
+.mainHeading{
+  text-align:center;
+  color:#56baed;
+
+}
+
+.uploadHeading{
+  text-align:center;
+  color:#56baed;
+}
+
+.browseButton{
+  background-color:#56baed;
+  width:50px;
+  display: inline-block;
+}
+
+.analytics2{
+  font-size: large;
+  margin-right: 5%;
+  margin-left: 70%;
+}
+
+@media (min-width: 600px) {
+  .analytics2 {
+    margin-left: 80%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .analytics2 {
+    margin-left: 90%;
+  }
+}
