--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -53,5 +53,5 @@
 
   <!--<button mat-button (click)="showResolvedFeedbacks()" *ngIf="!showResolved">Show Resolved</button>
   <button mat-button (click)="showResolvedFeedbacks()" *ngIf="showResolved">Show Unresolved</button>-->
-  <button mat-button [routerLink]="['/resolvedFeebacks/', objectName]">Show Resolved</button>
+  <button class="item2" mat-button [routerLink]="['/resolvedFeebacks/', objectName]">Show Resolved</button>
 </div>
