--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -6,6 +6,9 @@
     text-align: center;
 }
 
+button{
+    font-family: sans-serif;
+}
 .header .head {
     display: flex;
     width: 400px;
@@ -146,7 +149,7 @@
   
   /* Simple CSS3 Fade-in-down Animation */
   .fadeInDown {
-    font-family: sans-serif;
+    font-family:sans-serif;
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     -webkit-animation-duration: 1s;
